--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
             <td>:</td>
             <td id="birth_second"></td>
         </tr>
+        <tr>
+            <td id="birth_day2"></td>
+            <td>.</td>
+            <td id="birth_hour2"></td>
+            <td>:</td>
+            <td id="birth_minute2"></td>
+            <td>:</td>
+            <td id="birth_second2"></td>
+        </tr>
         </tbody>
     </table>
     <div class="text-center">
@@ -100,6 +109,7 @@
 <script>
     $.desmg.countdown.initDoms($('#met_day'), $('#met_hour'), $('#met_minute'), $('#met_second'), "2018-10-05 12:39:59", false);
     $.desmg.countdown.initDoms($('#birth_day'), $('#birth_hour'), $('#birth_minute'), $('#birth_second'), "2019-10-15 18:00:00", true);
+    $.desmg.countdown.initDoms($('#birth_day2'), $('#birth_hour2'), $('#birth_minute2'), $('#birth_second2'), "2019-12-19 11:00:00", true);
 </script>
 </body>
 </html>
